# 2R-robot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
